--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "my-app",
+  "name": "front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.56",
+    "@reduxjs/toolkit": "1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,9 +14,16 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "axios": "0.19.2",
+    "eslint-plugin-react": "7.20.3",
+    "immutability-helper": "3.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -35,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
+    "redux-logger": "^3.0.6"
   }
 }
