--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
     "axios": "0.19.2",
     "eslint-plugin-react": "7.20.3",
     "immutability-helper": "3.1.1",
